return logic
