# models/pharmacyModel.js
@@ -2,9 +2,10 @@ const mongoose = require('mongoose');
 const bcrypt = require('bcryptjs');
 
 const pharmacySchema = new mongoose.Schema({
-    username: { type: String, required: true, unique: true },
+    email: { type: String, required: true, unique: true }, // Changed to email
     password: { type: String, required: true },
     name: { type: String, required: true },
+    role: { type: String, default: 'pharmacy' }, // Default role
 });
 
 // Hash the password before saving
